--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
     "del:dist": "rm -rf dist",
     "start": "node dist/server.js",
     "db:migrate": "prisma migrate dev",
-    "db:studio": "prisma studio"
+    "db:studio": "prisma studio",
+    "lint": "eslint ."
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/mime": "^4.0.0",
     "@types/node": "^20.12.7",
-    "@types/bcryptjs": "^2.4.6",
+    "eslint": "^9.10.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-async-await": "^0.0.0",
+    "eslint-plugin-import": "^2.30.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^7.1.0",
     "prisma": "^5.14.0",
     "ts-node": "^10.9.2",
     "tsup": "^8.0.2",
@@ -24,15 +31,15 @@
   },
   "dependencies": {
     "@fastify/cookie": "^9.3.1",
-    "@fastify/jwt": "^8.0.1",
-    "bcryptjs": "^2.4.3",
     "@fastify/cors": "^9.0.1",
+    "@fastify/jwt": "^8.0.1",
     "@fastify/swagger": "^8.14.0",
     "@fastify/swagger-ui": "^3.0.0",
     "@prisma/client": "^5.14.0",
+    "bcryptjs": "^2.4.3",
     "fastify": "^4.26.2",
-    "fastify-plugin": "^4.5.1",
     "fastify-multer": "^2.0.3",
+    "fastify-plugin": "^4.5.1",
     "fastify-type-provider-zod": "^1.1.9",
     "zod": "^3.22.5"
   }
