--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/mime": "^4.0.0",
     "@types/node": "^20.12.7",
+    "@typescript-eslint/eslint-plugin": "^8.5.0",
+    "@typescript-eslint/parser": "^8.5.0",
     "eslint": "^9.10.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-async-await": "^0.0.0",
