Update eslint configuration to ignore additional directories and enable TypeScript linting

--- a/package.json
+++ b/package.json
@@ -14,17 +14,10 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@biomejs/biome": "1.8.3",
     "@types/bcryptjs": "^2.4.6",
     "@types/mime": "^4.0.0",
     "@types/node": "^20.12.7",
-    "@typescript-eslint/eslint-plugin": "^8.5.0",
-    "@typescript-eslint/parser": "^8.5.0",
-    "eslint": "^9.10.0",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-async-await": "^0.0.0",
-    "eslint-plugin-import": "^2.30.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^7.1.0",
     "prisma": "^5.14.0",
     "ts-node": "^10.9.2",
     "tsup": "^8.0.2",
