--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsx watch src/server.ts",
+    "dev": "tsx --env-file .env watch src/server.ts",
     "build": "tsup src --format esm",
     "del:dist": "rm -rf dist",
     "start": "node dist/server.js",
