Refactor docker-compose.yml to add mytree-server service and update pg service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,17 @@
 name: mytree-server
 
 services:
+  mytree-server:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "3100:3100"
+    volumes:
+      - .:/home/node/app
+      - ./dist:/home/node/app/dist
+    depends_on:
+      - pg
   pg:
     image: bitnami/postgresql:13.16.0
     ports:
