Refactor docker-compose.yml to add env_file for mytree-server service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       - /home/node/app/node_modules
     depends_on:
       - pg
+    env_file:
+        - .env 
   pg:
     image: bitnami/postgresql:13.16.0
     ports:
