--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,8 @@ services:
       - /home/node/app/node_modules
     depends_on:
       - pg
-    env_file:
-      - .env
+    environment:
+      DATABASE_URL: ${DATABASE_URL}
   pg:
     image: bitnami/postgresql:13.16.0
     ports:
