--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@fastify/swagger-ui": "^3.0.0",
     "@prisma/client": "^5.14.0",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.5",
     "fastify": "^4.28.1",
     "fastify-plugin": "^4.5.1",
     "fastify-type-provider-zod": "^1.1.9",
