refactor: Add docker-compose commands for easier development setup

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "db:migrate": "prisma migrate dev",
     "db:studio": "prisma studio",
     "db:generate": "prisma generate",
-    "db:seed": "tsx --env-file .env src/prisma/seed.ts"
+    "db:seed": "tsx --env-file .env src/prisma/seed.ts",
+    "dk:up": "docker-compose up --build",
+    "dk:down": "docker compose down --rmi 'all' -v"
   },
   "license": "MIT",
   "devDependencies": {
